Fix z-index issue in mobile toggle nav

--- a/wp-content/themes/the-commons/style.css
+++ b/wp-content/themes/the-commons/style.css
@@ -597,6 +597,7 @@ h4{
     }
     .blog-flex-container .blog-sidebar.is-active {
         max-height: 999px;
+        z-index: 1;
     }
 }
 
